마이트립어드바이저 회원가입 및 마이트립리스트

--- a/mytripadviser/index.html
+++ b/mytripadviser/index.html
@@ -53,8 +53,10 @@
             <dd class="img"></dd>
         </dl>
     </article>
+    <script src="libs/js.cookie.js"></script>
     <script src="libs/jquery-3.3.1.min.js"></script>
     <script src="libs/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+    </script>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
